--- a/style.css
+++ b/style.css
@@ -9,7 +9,8 @@ body {
 header {
     color: rgb(0, 211, 130);
     font-size: large;
-    margin-left: 2%;
+    margin-left: 30px;
+    margin-top: 30px;
     text-align: left;
     padding: 20px 40px 10px 50px;
     
@@ -67,7 +68,7 @@ img {
     margin: 5%;
 }
 
-.div about {
+.about {
     margin: 0;
     padding: 0;
 
